GPROD/apps/backend/k8s/overlays/stage-gprod/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gprod-backend
  namespace: stage-gprod
  labels:
    app: gprod-backend
    environment: staging
spec:
  selector:
    app: gprod-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
